# DataclassModule

./: .gitignore  README.md  pyproject.toml
.github/: workflows
.github/workflows/: python-package.yml
datamodule/: datamodule.py
tests/: test_datamodule.py
torch_dataclasses/: __init__.py  dataclassmodule.py
