[tool.poetry]
name = "DataclassModule"
version = "0.1.0"
description = "dataclass + nn.Module"
license = "MIT"
authors = ["yohan-pg <pg.yohan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.11.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
